--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
         <h1>Krishna Shukla</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <ul type="circle">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </nav>
     <div>
         <section>
             <article>
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur <span style="color: blueviolet;">adipisicing</span> elit. Dicta, ullam!</p>
+                <p>This is a <span style="color: blueviolet;">semantic</span> webpage example</p>
             </article>
         </section>
     </div>
     <footer>Krishna Shukla - September 22, 2025</footer>
 </body>
 </html>
+
